chore: initial work on dashboard

--- a/modd.conf
+++ b/modd.conf
@@ -1,4 +1,4 @@
 **/*.go {
     prep: go test ./... && make dist
-    daemon+sigterm: ./dist/inspector -upstream http://localhost:8081 -proxy-addr localhost:8080 -mng-addr localhost:8082
+    daemon+sigterm: ./dist/inspector proxy --upstream http://localhost:8081 -proxy-addr localhost:8080 -mng-addr localhost:8082
 }
